# Calc-C

./: CMakeLists.txt  Main.c  README.md
src/: Main.c
