cmake_minimum_required(VERSION 3.14)
project(Calc-C LANGUAGES C VERSION 2.1.0)
set(CMAKE_C_FLAGS "-std=c99 -fdiagnostics-color=always -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wformat=2 -Wnull-dereference -Wstrict-prototypes -Wmissing-prototypes -Wcast-align -Wpointer-arith -Wundef -v -O3 -funroll-loops -flto -mtune=native -march=native")
include(FetchContent)
FetchContent_Declare(C-Utils GIT_REPOSITORY https://github.com/paulao255/C-Utils.git GIT_TAG main)
FetchContent_MakeAvailable(C-Utils)
add_executable(Executable.exe ../src/Main.c)
target_link_libraries(Executable.exe PRIVATE C-Utils::C-Utils)
