cmake_minimum_required(VERSION 4.2.1)
project(Calc-C LANGUAGES C VERSION 20260114)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_C_FLAGS "-lm -fdiagnostics-color=always -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion -Wformat=2 -Wnull-dereference -Wstrict-prototypes -Wmissing-prototypes -Wcast-align -Wpointer-arith -Wundef -v -O3 -funroll-loops -flto -mtune=native -march=native")
include(FetchContent)
FetchContent_Declare(C-Utils GIT_REPOSITORY https://github.com/paulao255/C-Utils.git GIT_TAG main)
FetchContent_MakeAvailable(C-Utils)
add_executable(Executable.exe ../src/Main.c)
target_link_libraries(Executable.exe PRIVATE C-Utils::C-Utils)
